--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -1,26 +1,27 @@
 .form {
-    max-width:800px;
+    max-width: 800px;
     border: 1px solid #000;
-    border-radius: 2px;
-    padding: 15px;
-    margin:0 auto;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 0 auto;
 }
 
 .form__label {
-    
-    display: block;
+    display: inline-block;
     padding: 5px;
-    margin:auto;
+    max-width: 180px;
 }
 
 .form__input {
     text-align: center;
     border: 1px solid #000;
-    padding:2px;
-    max-width: 180px;
+    padding: 2px;
+    max-width: 200px;
 }
 
-.form__listSelect
-{
-    list-style-type:none;
+.form__header{
+    font-size: 25px;
+    padding:10px;
+    color:#3ebd64;
+    margin:0 auto;
 }
