--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -9,19 +9,31 @@
 .form__label {
     display: inline-block;
     padding: 5px;
+    width: 100%;
     max-width: 180px;
 }
 
 .form__input {
+    display: inline-block;
     text-align: center;
     border: 1px solid #000;
-    padding: 2px;
+    border-radius: 5px;
+    padding: 5px;
+    width: 100%;
     max-width: 200px;
+    margin: 0 auto;
 }
 
-.form__header{
+.form__listSelect {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.form__header {
     font-size: 25px;
-    padding:10px;
-    color:#3ebd64;
-    margin:0 auto;
+    padding: 10px;
+    color: #3ebd64;
+    margin: 0 auto;
 }
