--- a/src/Button/style.css
+++ b/src/Button/style.css
@@ -3,12 +3,13 @@
     width: 100%;
     background-color: #3ebd64;
     padding: 10px;
-    margin: 50px auto;
+    margin: 0 auto;
     display: block;
     border: none;
     border-radius: 10px;
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
 }
 
 .button:hover {
